upgrade sdk version

--- a/mapsted-sample-cordova/platforms/android/project.properties
+++ b/mapsted-sample-cordova/platforms/android/project.properties
@@ -14,6 +14,6 @@ android.library.reference.2=app
 cordova.system.library.1=platform('com.google.firebase:firebase-bom:32.5.0')
 cordova.system.library.2=com.google.firebase:firebase-crashlytics
 cordova.gradle.include.1=cordova-plugin-firebase-crash/sampleionic-build.gradle
-cordova.system.library.3=com.mapsted:sdk-map-ui:5.4.28-rc-1
-cordova.system.library.4=com.mapsted:sdk-map:5.4.28-rc-1
-cordova.system.library.5=com.mapsted:sdk-core:5.4.28-rc-1
+cordova.system.library.3=com.mapsted:sdk-map-ui:5.4.28
+cordova.system.library.4=com.mapsted:sdk-map:5.4.28
+cordova.system.library.5=com.mapsted:sdk-core:5.4.28
