--- a/mapsted-sample-cordova/platforms/android/app/build.gradle
+++ b/mapsted-sample-cordova/platforms/android/app/build.gradle
@@ -301,9 +301,9 @@ dependencies {
     implementation(project(path: ":CordovaLib"))
     implementation platform("com.google.firebase:firebase-bom:32.5.0")
     implementation "com.google.firebase:firebase-crashlytics"
-    implementation "com.mapsted:sdk-map-ui:5.4.28-rc-1"
-    implementation "com.mapsted:sdk-map:5.4.28-rc-1"
-    implementation "com.mapsted:sdk-core:5.4.28-rc-1"
+    implementation "com.mapsted:sdk-map-ui:5.4.28"
+    implementation "com.mapsted:sdk-map:5.4.28"
+    implementation "com.mapsted:sdk-core:5.4.28"
     // SUB-PROJECT DEPENDENCIES END
 }
 
