--- a/mapsted-sample-cordova/platforms/android/app/repositories.gradle
+++ b/mapsted-sample-cordova/platforms/android/app/repositories.gradle
@@ -19,14 +19,6 @@
 ext.repos = {
     google()
     mavenCentral()
-    maven { url = uri("https://jitpack.io") }
-    // maven { url = uri("https://mobilesdk.mapsted.com:8443/artifactory/gradle-mapsted") }
-    maven { 
-      url = uri("http://mobilesdk.mapsted.com:8081/artifactory/gradle-mapsted-developer")
-      allowInsecureProtocol = true
-      credentials {
-        username="admin"
-        password="LkSQk27jeUt86MJk"
-      }
-    }
+	maven { url "https://jitpack.io" }
+	maven { url "https://mobilesdk.mapsted.com:8443/artifactory/gradle-mapsted" }
 }
